Changes
=======

2.5 (unreleased)
----------------

- Nothing changed yet.


2.4 (2011-04-27)
----------------

- Fix the `global_adapter` directive implementation to accept an explicit
  "empty" name for nameless adapter registrations (as it used to be that
  providing an empty name in the registration would actually result in
  registering a named adapter in case the factory has a `grok.name`).

2.3 (2011-02-14)
----------------

- Implement the generic (Multi)Subscriptions components.

2.2 (2010-11-03)
----------------

- The default values computation for the context directive and the provides
  directive is now defined in the directives themselves. This means that where
  the values for these directives is being retrieved, the "default_context"
  function does not need to be passed along anymore for general cases.

  Analogous to this, when getting values for the provides directive the
  "default_provides" function does not need to be passed along in the general
  case.

2.1 (2010-11-01)
----------------

* Made package comply to zope.org repository policy.

* Moved directives 'order' from grokcore.viewlet and 'path' from
  grokcore.view to this very package.

* Tiny dependency adjustment: moved zope.event to test dependencies.

* Port from 1.x branch exclude parameter to the Grok ZCML directive.

* Port from 1.x branch the ignore of testing.py modules.

2.0 (2009-09-16)
----------------

* Use a newer version of Martian that has better support for
  inheritance.  This is demonstrated in ``tests/inherit``.

* The ``ContextGrokker`` and the ``scan.py`` module have gone away
  thanks the newer Martian.

* Directive implementations (in their factory method) should *not*
  bind directives. Directive binding cannot take place at import time,
  but only at grok time. Binding directives during import time (when
  directives are executed) can lead to change problems. (we noticed
  this during our refactoring to use the new Martian).
